--- a/Imaging/CH3_03-CTF.ipynb
+++ b/Imaging/CH3_03-CTF.ipynb
@@ -20,7 +20,7 @@
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/main/Imaging/CH3_03-CTF.ipynb)\n",
     " \n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Imaging/CH3_01-CTF.ipynb)\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Imaging/CH3_03-CTF.ipynb)\n",
     "\n",
     "\n",
     "\n",
@@ -7985,7 +7985,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "288px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
